force-app/main/default/objects/Property__c/fields/Current_MortgageValueRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>Current_MortgageValueRefreshDate__c</fullName>
    <label>Current Mortgage Value Refresh Date</label>
    <type>Date</type>
</CustomField>