force-app/main/default/objects/Property__c/fields/CurrentMortgageValue__c.field-meta.xml
<CustomField>
    <fullName>CurrentMortgageValue__c</fullName>
    <label>Current Mortgage Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>