force-app/main/default/objects/Property__c/fields/DatePurchased__c.field-meta.xml
<CustomField>
    <fullName>DatePurchased__c</fullName>
    <label>Date Purchased</label>
    <type>Date</type>
</CustomField>