force-app/main/default/objects/Property__c/fields/DateSold__c.field-meta.xml
<CustomField>
    <fullName>DateSold__c</fullName>
    <label>Date Sold</label>
    <type>Date</type>
</CustomField>