force-app/main/default/objects/Property__c/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <formula>CurrentValue__c - CurrentMortgageValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>