force-app/main/default/objects/Property__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <formula>IF(SoldPrice__c&gt;0,SoldPrice__c,CurrentValue__c) - PurchasePrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>