force-app/main/default/objects/Property__c/fields/SoldPrice__c.field-meta.xml
<CustomField>
    <fullName>SoldPrice__c</fullName>
    <label>Sold Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>