force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PurchasePrice__c</columns>
    <columns>CurrentValue__c</columns>
    <columns>DatePurchased__c</columns>
    <columns>Equity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>